[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybacktest"
version = "0.1.0"
description = "A Python backtesting framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "sciencemj", email = "sciencemj.park@gmail.com"}]
keywords = ["backtesting", "trading", "finance"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "yfinance>=0.1.63",
    "pydantic>=2.12.5"
]

[project.urls]
Repository = "https://github.com/sciencemj/pybacktest"